[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/gui/back_button.png" type="Texture" id=1]
[ext_resource path="res://content/gui/menus/BankingApp.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=4]

[node name="BankingApp" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 768.0
margin_bottom = 1408.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Background/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 1345.0
custom_constants/separation = 20
alignment = 1

[node name="HBox" type="HBoxContainer" parent="Background/Margin/VBox"]
margin_top = 49.0
margin_right = 728.0
margin_bottom = 83.0

[node name="Label" type="Label" parent="Background/Margin/VBox/HBox"]
margin_right = 144.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Balance:"

[node name="BalanceLabel" type="Label" parent="Background/Margin/VBox/HBox"]
margin_left = 148.0
margin_right = 256.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "1000 Â¥"
align = 2

[node name="TransactionHistoryLabel" type="RichTextLabel" parent="Background/Margin/VBox"]
margin_top = 103.0
margin_right = 728.0
margin_bottom = 1127.0
rect_min_size = Vector2( 0, 1024 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true

[node name="BackButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 1147.0
margin_right = 728.0
margin_bottom = 1275.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
icon = ExtResource( 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/Margin/VBox/BackButton" to="." method="_on_BackButton_pressed"]
